--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,11 @@ buildscript {
 
 apply plugin: 'kotlin'
 apply plugin: 'maven'
+apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 group 'com.dallasgutauckis.confluence'
-version '1.0-SNAPSHOT'
+version '1.0.1-SNAPSHOT'
 
 ext {
     okhttpVersion = '3.11.0'
